--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://weikeatho-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=sentiment_analyzer_url=https://sentianalyzer.1jnvfit4uwk0.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.1lf3ua46eyxc.us-south.codeengine.appdomain.cloud/
